# ir_wolf

./: CMakeLists.txt  LICENSE  README.md  common.h  main.cpp  map_manager.cpp  map_manager.h  rabbit.cpp  rabbit.h  wolf.cpp  wolf.h
data/: config.txt
